azure-k8s-bare/templates/traefik/7-nginx-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: default
spec:
  selector:
    app: nginx-frontend
  ports:
    - protocol: TCP
      port: 80
      name: nginx-http
