azure-k8s-bare/templates/traefik/50-ingress.yaml
# -------------------------------------------------------------------
#
# Module:         k8s-terraform
# Submodule:      templates/traefik/50-ingress.yaml
# Environments:   all
# Purpose:        YAML specification to create an ingress for the
#                 Traefik web UI.
#
# Created on:     23 June 2019
# Created by:     David Sanders
# Creator email:  dsanderscanada@nospam-gmail.com
#
# -------------------------------------------------------------------
# Modifed On   | Modified By                 | Release Notes
# -------------------------------------------------------------------
# 23 Jun 2019  | David Sanders               | First release.
# -------------------------------------------------------------------
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/auth-type: "basic"
    traefik.ingress.kubernetes.io/auth-secret: "traefik-auth"
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik${domain_name}
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: web
  tls:
   - secretName: traefik-ui-tls-cert
